fix: added margins to the featureBlogPosts cards on mobile

--- a/src/components/shared/sections/featuredBlogPosts/card.module.css
+++ b/src/components/shared/sections/featuredBlogPosts/card.module.css
@@ -31,5 +31,6 @@
 @media only screen and (max-width: 767px) {
   .container {
     min-height: 120px;
+    margin: 10px;
   }
 }
